Update TOD/DOW JS files, modifications to index.html

--- a/solution/static/css/styles.css
+++ b/solution/static/css/styles.css
@@ -39,3 +39,12 @@ Text used with the count of citations within the district */
     font-size: 22px;
     pointer-events: none;
 }
+
+.bar {
+    fill: orange;
+  }
+  
+  .bar:hover {
+    fill: green;
+  }
+  
