--- a/solution/static/css/styles.css
+++ b/solution/static/css/styles.css
@@ -47,4 +47,6 @@ Text used with the count of citations within the district */
   .bar:hover {
     fill: green;
   }
+
+  #map { position:relative; top:0; bottom:0; width:500px;height:500px; }
   
