--- a/solution/templates/index.html
+++ b/solution/templates/index.html
@@ -11,6 +11,7 @@
     
         <!-- CSS: Application -->
         <link rel="stylesheet" href="static/css/styles.css">
+        <link href='https://api.tiles.mapbox.com/mapbox-gl-js/v1.0.0/mapbox-gl.css' rel='stylesheet' />
     
     </head>
     <body>
@@ -88,11 +89,12 @@
         <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>    
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>       
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-    
+        <script src='https://api.tiles.mapbox.com/mapbox-gl-js/v1.0.0/mapbox-gl.js'></script>
         <!-- JS: D3.Tip-->
         <script src="https://cdnjs.cloudflare.com/ajax/libs/d3-tip/0.9.1/d3-tip.js"></script>
 
         <!-- JS: Application -->
+        <script type="text/javascript" src="static/js/config.js"></script>
         <script type="text/javascript" src="static/js/districtmap.js"></script>
         <script type="text/javascript" src="static/js/districtfilter.js"></script>
         <script type="text/javascript" src="static/js/timedaychart.js"></script>
