--- a/solution/templates/index.html
+++ b/solution/templates/index.html
@@ -22,9 +22,18 @@
             <h1>LA DOT District Execute Dashboard</h1>
     
     
-            <!-- Row: Year Filter -->
+            <!-- Row: Filter -->
             <div class="row">
-                <div class="col-12">
+
+                <!-- Column: District Filter -->
+                <div  class="col-10">
+                    <div id="districtFilter">
+                    
+                    </div>
+                </div>
+
+                <!-- Column: Year Filter -->
+                <div class="col-2">
                     <div id="yearFilter">
                         year filter here; radio button?
                     </div>
@@ -33,13 +42,13 @@
     
     
             <!-- Row: District Filter -->
-            <div class="row">
+            <!-- <div class="row">
                 <div  class="col-12">
                     <div id="districtFilter">
                     
                     </div>
                 </div>
-            </div>
+            </div> -->
     
     
             <!-- Row: Charts -->
@@ -89,7 +98,10 @@
         <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>    
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>       
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+        
+        <!-- JS: Mapbox-->
         <script src='https://api.tiles.mapbox.com/mapbox-gl-js/v1.0.0/mapbox-gl.js'></script>
+        
         <!-- JS: D3.Tip-->
         <script src="https://cdnjs.cloudflare.com/ajax/libs/d3-tip/0.9.1/d3-tip.js"></script>
 
@@ -100,6 +112,7 @@
         <script type="text/javascript" src="static/js/timedaychart.js"></script>
         <script type="text/javascript" src="static/js/dowchart.js"></script>
         <script type="text/javascript" src="static/js/mock.js"></script>
+        <script type="text/javascript" src="static/js/yearfilter.js"></script>
         <script type="text/javascript" src="static/js/app.js"></script>
     
     </body>
