--- a/solution/templates/index.html
+++ b/solution/templates/index.html
@@ -11,6 +11,8 @@
     
         <!-- CSS: Application -->
         <link rel="stylesheet" href="static/css/styles.css">
+
+        <!-- CSS: Mapbox -->
         <link href='https://api.tiles.mapbox.com/mapbox-gl-js/v1.0.0/mapbox-gl.css' rel='stylesheet' />
     
     </head>
@@ -35,21 +37,10 @@
                 <!-- Column: Year Filter -->
                 <div class="col-2">
                     <div id="yearFilter">
-                        year filter here; radio button?
                     </div>
                 </div>
             </div>
-    
-    
-            <!-- Row: District Filter -->
-            <!-- <div class="row">
-                <div  class="col-12">
-                    <div id="districtFilter">
-                    
-                    </div>
-                </div>
-            </div> -->
-    
+        
     
             <!-- Row: Charts -->
             <div class="row">
