Started meter metadata

--- a/solution/templates/index.html
+++ b/solution/templates/index.html
@@ -104,6 +104,7 @@
         <script type="text/javascript" src="static/js/dowchart.js"></script>
         <script type="text/javascript" src="static/js/mock.js"></script>
         <script type="text/javascript" src="static/js/yearfilter.js"></script>
+        <script type="text/javascript" src="static/js/metermetadata.js"></script>
         <script type="text/javascript" src="static/js/app.js"></script>
     
     </body>
