Prepare for meter metadata; adding mock framework

--- a/solution/templates/index.html
+++ b/solution/templates/index.html
@@ -79,6 +79,12 @@
                     </div>
                 </div>
             </div>
+
+            <!-- MOCK METER CLICK -->
+            <div>
+                <button id="mockmeter" type="button" onclick="mockMeterClick">Mock: select meter</button>
+            </div>
+
         </div>
      
     
