--- a/solution/templates/index.html
+++ b/solution/templates/index.html
@@ -74,15 +74,32 @@
     
                 <!-- Column: Metadata -->
                 <div class="col-4">
-                    <div id="mapMetadata">
-                        metadata
+                    <div id="selectedMeterMetadata">
+                        <table class="table table-borderless table-sm">
+                            <tbody>
+                                <tr>
+                                    <td>Meter ID</td>
+                                    <td id="meterMetadataTableID"></td>
+                                </tr>
+                                <tr>
+                                    <td>Location</td>
+                                    <td id="meterMetadataTableLocation"></td>
+                                </tr>
+                                <tr>
+                                    <td>Count</td>
+                                    <td id="meterMetadataTableCitation"></td>
+                                </tr>
+                            </tbody>
+                        </table>
+                    </div>
+                    <div id="mapMetadata">                       
                     </div>
                 </div>
             </div>
 
             <!-- MOCK METER CLICK -->
             <div>
-                <button id="mockmeter" type="button" onclick="mockMeterClick">Mock: select meter</button>
+                <button id="mockmeter" type="button">Mock: select meter</button>
             </div>
 
         </div>
@@ -103,6 +120,7 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/d3-tip/0.9.1/d3-tip.js"></script>
 
         <!-- JS: Application -->
+        <script type="text/javascript" src="static/js/helper.js"></script>
         <script type="text/javascript" src="static/js/config.js"></script>
         <script type="text/javascript" src="static/js/districtmap.js"></script>
         <script type="text/javascript" src="static/js/districtfilter.js"></script>
