--- a/solution/templates/index.html
+++ b/solution/templates/index.html
@@ -11,6 +11,8 @@
     
         <!-- CSS: Application -->
         <link rel="stylesheet" href="static/css/styles.css">
+        <link rel="stylesheet" href="static/css/d3Style.css">
+
 
         <!-- CSS: Mapbox -->
         <link href='https://api.tiles.mapbox.com/mapbox-gl-js/v1.0.0/mapbox-gl.css' rel='stylesheet' />
