--- a/solution/templates/index.html
+++ b/solution/templates/index.html
@@ -23,11 +23,11 @@
         <div class="container">
     
             <!-- Header -->
-            <h1>LA DOT District Execute Dashboard</h1>
+            <h1 class="text-center pt-1">LA DOT District Execute Dashboard</h1>
     
     
             <!-- Row: Filter -->
-            <div class="row">
+            <div class="row pt-1">
 
                 <!-- Column: District Filter -->
                 <div  class="col-10">
@@ -45,19 +45,22 @@
         
     
             <!-- Row: Charts -->
-            <div class="row">
+            <div class="row pt-4">
     
                 <!-- Column: Day Of Week Chart -->
                 <div class="col-6">
+                    <div class="text-center font-weight-bold">Citations by Day Of Week</div>
+
                     <div id="dowChart">
-                        DOW
+                        
                     </div>
                 </div>
     
                 <!-- Column: Time of Day Chart -->
                 <div class="col-6">
+                     <div class="text-center font-weight-bold">Citations by Time of Day</div>
+
                     <div id="timeChart">
-                        time
                     </div>
                 </div>
     
