--- a/solution/static/css/styles.css
+++ b/solution/static/css/styles.css
@@ -94,6 +94,30 @@ Text used with the year */
     fill: black;
 }
 
+.meterAxisText{
+    font-family: sans-serif;
+    font-size: 12px;
+    font-weight: normal;
+    pointer-events: none;
+    fill: black;
+}
+
+.meterMetadataLabelText{
+    font-family: sans-serif;
+    font-size: 12px;
+    font-weight: bold;
+    pointer-events: none;
+    fill: black;
+}
+
+.meterMetadataValueText{
+    font-family: sans-serif;
+    font-size: 12px;
+    font-weight: normal;
+    pointer-events: none;
+    fill: black;
+}
+
 
 /* Charts */
 .bar {
