--- a/solution/templates/index.html
+++ b/solution/templates/index.html
@@ -20,11 +20,16 @@
     </head>
     <body>
         
+
+        <!-- Image and text -->
+        <nav class="navbar navbar-dark bg-primary">
+            <a class="navbar-brand" href="#">
+            <img src="static/image/logo-ladot-pmb.png" width="30" height="30" class="d-inline-block align-top" alt="">
+            LA DOT Execute Dashboard
+            </a>
+        </nav>
+
         <div class="container">
-    
-            <!-- Header -->
-            <h1 class="text-center pt-1">LA DOT District Execute Dashboard</h1>
-    
     
             <!-- Row: Filter -->
             <div class="row pt-1">
@@ -80,7 +85,7 @@
                 <!-- Column: Metadata -->
                 <div class="col-4">
                     <div id="selectedMeterMetadata">
-                        <div class="text-center font-weight-bold pt-1">Selected Meter Information</div>
+                        <div class="text-center font-weight-bold pt-2">Selected Meter Information</div>
                         <table class="table table-borderless table-sm">
                             <tbody>
                                 <tr>
