Update width of map in CSS and updated titles in HTML

--- a/solution/templates/index.html
+++ b/solution/templates/index.html
@@ -77,8 +77,9 @@
     
                 <!-- Column: Map -->
                 <div class="col-8">
+
+                    <div class="text-center font-weight-bold">Top 100 Citations Meters</div>
                     <div id="map">
-                    the map here
                     </div>
                 </div>
     
@@ -106,11 +107,6 @@
                     <div id="mapMetadata">                       
                     </div>
                 </div>
-            </div>
-
-            <!-- MOCK METER CLICK -->
-            <div>
-                <button id="mockmeter" type="button">Mock: select meter</button>
             </div>
 
         </div>
