--- a/solution/static/css/styles.css
+++ b/solution/static/css/styles.css
@@ -130,6 +130,11 @@ Text used with the year */
 
 
   /* Map */
-  #map { position:relative; top:0; bottom:0; width:500px;height:500px; }
+  #map { 
+      position:relative; 
+      top:0; 
+      bottom:0; 
+      width:100%;
+      height:500px; }
 
   
